<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:text="@string/departStatus"
            android:textSize="@dimen/statusTextSize"
            android:textColor="@color/departColor"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginStart="@dimen/marginStart"
            android:id="@+id/departStatus"/>

    <TextView
            android:id="@+id/departDate"
            android:text="@string/departDate"
            android:textSize="@dimen/dateTextSize"
            android:textColor="@color/dateColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/departStatus"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginEnd="@dimen/marginEnd"
    />

    <LinearLayout
            android:id="@+id/freeSeatsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginTop="@dimen/freeSeatsMarginTop">
        <TextView
                android:text="@string/returnFreeSeats"
                android:textSize="@dimen/freeSeatsTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/departFreeSeats"
        />


        <TextView
                android:text="@string/departFreeSeatsAmount"
                android:textSize="@dimen/freeSeatsTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/freeSeatsNumber"
                android:layout_marginStart="@dimen/marginBetweenElements"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentEnd="true"
                  android:layout_marginEnd="@dimen/marginEnd"
                  android:layout_alignBottom="@id/freeSeatsContainer"
    >
        <TextView
                android:text="@string/departCost"
                android:textSize="@dimen/costTextSize"
                android:textStyle="bold"
                android:textColor="@color/costColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/departCost"
                android:layout_marginEnd="@dimen/marginBetweenElements"
        />

        <TextView
                android:text="@string/currency"
                android:textSize="@dimen/costTextSize"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/departCurrency"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/flightMarginTop"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
    >

        <TextView
                android:text="@string/departFrom"
                android:textSize="@dimen/pointTextSize"
                android:textColor="@color/pointColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/departFrom"
        />
        <ImageView
                android:id="@+id/flightImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rotation="90.0"
                android:src="@drawable/ic_flight_black_24dp"
                android:contentDescription="@string/flightImage"
                android:layout_marginStart="@dimen/flightImageMargin"
                android:layout_marginEnd="@dimen/flightImageMargin"
        />
        <TextView
                android:text="@string/departTo"
                android:textSize="@dimen/pointTextSize"
                android:textColor="@color/pointColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/departTo"/>
    </LinearLayout>


    <LinearLayout
            android:id="@+id/departFlightTimeContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/departLine"
            android:layout_marginBottom="@dimen/flightTimeBottomMargin"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/marginStart"
    >
        <TextView
                android:text="@string/departTimeFrom"
                android:textSize="@dimen/timeTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/departTimeStart"
        />
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_flight_takeoff_black_24dp"
                android:id="@+id/departTakeOffImage"
                android:layout_marginStart="@dimen/marginBetweenElements"
        />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_trending_flat_black_24dp"
                android:id="@+id/departArrow"
                android:layout_marginStart="@dimen/arrowMargin"
                android:layout_marginEnd="@dimen/arrowMargin"/>

        <TextView
                android:text="@string/departTimeTo"
                android:textSize="@dimen/timeTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/departLandTime"
        />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_flight_land_black_24dp"
                android:id="@+id/departLandImage"
                android:layout_marginStart="@dimen/marginBetweenElements"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/departLine"
            android:layout_marginBottom="@dimen/flightTimeBottomMargin"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/marginEnd"
    >
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_access_time_black_24dp"
                android:id="@+id/departClockImage"
                android:layout_marginEnd="@dimen/marginBetweenElements"
        />
        <TextView
                android:text="@string/departFlightTime"
                android:textSize="@dimen/flightTimeTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/departTotalTime"/>
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineHeight"
            android:background="@color/lineColor"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/lineMargin"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/lineMargin"
            android:layout_marginTop="@dimen/lineMarginTop"
            android:layout_alignParentTop="true"
            android:id="@+id/departLine"/>

    <TextView
            android:id="@+id/returnStatus"
            android:text="@string/returnStatus"
            android:textSize="@dimen/statusTextSize"
            android:textStyle="bold"
            android:textColor="@color/returnTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/departLine"
            android:layout_marginTop="@dimen/marginTop"/>
    <TextView
            android:id="@+id/returnDate"
            android:text="@string/returnDate"
            android:textSize="@dimen/dateTextSize"
            android:textColor="@color/dateColor"
            android:textAlignment="@+id/departStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/returnStatus"
            android:layout_alignTop="@+id/departLine"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/marginEnd"
    />

    <LinearLayout
            android:id="@+id/returnFreeSeatsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_alignTop="@id/departLine"
            android:layout_marginTop="@dimen/freeSeatsMarginTop"
    >
        <TextView
                android:text="@string/returnFreeSeats"
                android:textSize="@dimen/freeSeatsTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnFreeSeats"/>

        <TextView
                android:text="@string/returnFreeSeatsAmount"
                android:textSize="@dimen/freeSeatsTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnSeatsNumber"
                android:layout_marginStart="@dimen/marginBetweenElements"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/freeSeatsMarginTop"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/marginEnd"
            android:layout_alignBottom="@id/returnFreeSeatsContainer"
    >
        <TextView
                android:text="@string/returnCost"
                android:textSize="@dimen/costTextSize"
                android:textStyle="bold"
                android:textColor="@color/costColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnCost"
                android:layout_marginEnd="@dimen/marginBetweenElements"
        />
        <TextView
                android:text="@string/currency"
                android:textSize="@dimen/costTextSize"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnCurrency"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/flightMarginTop"
            android:layout_alignTop="@id/departLine"
            android:layout_centerHorizontal="true"
    >

        <TextView
                android:text="@string/returnFrom"
                android:textSize="@dimen/pointTextSize"
                android:textColor="@color/pointColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnFrom"
        />
        <ImageView
                android:id="@+id/returnFlightImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rotation="90.0"
                android:src="@drawable/ic_flight_black_24dp"
                android:contentDescription="@string/flightImage"
                android:layout_marginStart="@dimen/flightImageMargin"
                android:layout_marginEnd="@dimen/flightImageMargin"
        />
        <TextView
                android:text="@string/returnTo"
                android:textSize="@dimen/pointTextSize"
                android:textColor="@color/pointColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnTo"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/returnFlightTimeContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/returnLine"
            android:layout_marginBottom="@dimen/flightTimeBottomMargin"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/marginStart"
    >
        <TextView
                android:text="@string/departTimeFrom"
                android:textSize="@dimen/timeTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnTimeStart"
        />
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_flight_takeoff_black_24dp"
                android:id="@+id/returnTakeOffImage"
                android:layout_marginStart="@dimen/marginBetweenElements"
        />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_trending_flat_black_24dp"
                android:id="@+id/returnArrow"
                android:layout_marginStart="@dimen/arrowMargin"
                android:layout_marginEnd="@dimen/arrowMargin"/>

        <TextView
                android:text="@string/departTimeTo"
                android:textSize="@dimen/timeTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnLandTime"
        />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_flight_land_black_24dp"
                android:id="@+id/returnLandImage"
                android:layout_marginStart="@dimen/marginBetweenElements"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/returnLine"
            android:layout_marginBottom="@dimen/flightTimeBottomMargin"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/marginEnd"
    >
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_access_time_black_24dp"
                android:id="@+id/returnClockImage"
                android:layout_marginEnd="@dimen/marginBetweenElements"
        />
        <TextView
                android:text="@string/departFlightTime"
                android:textSize="@dimen/flightTimeTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnTotalTime"/>
    </LinearLayout>


    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/lineHeight"
            android:background="@color/lineColor"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/lineMargin"
            android:layout_marginEnd="@dimen/lineMargin"
            android:id="@+id/returnLine"
            android:layout_alignTop="@id/departLine"
            android:layout_marginTop="@dimen/lineMarginTop"/>

</RelativeLayout>